--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   
   "scripts": {
-    "build": "if-env TYPE=backend && (ce backend && npm install) || (cd frontend && npm install)",
+    "build": "npm run build ",
     "backend": "node ./backend/server.js",
     "frontend" : "cd frontend && npm start"
   },
